fix: fix tablet sidenav collapsed issue

--- a/src/styles/core/_sidenav.scss
+++ b/src/styles/core/_sidenav.scss
@@ -39,7 +39,6 @@
 .matero-sidenav {
   position: absolute;
   overflow-x: hidden;
-  width: $sidenav-width;
   transition: swift-ease-out(width); // Only set width property
 
   @include mat-elevation(2);
